fixing image alignments

--- a/style.css
+++ b/style.css
@@ -42,15 +42,9 @@ img {
 }
 
 .projects article {
-  display: grid;
-  grid-template-rows: subgrid;
-  grid-row: span 3;
-  gap: 1em;
-}
-
-.project-details {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .projects h2 {
